[package]
authors = ["hepp3n"]
edition = "2021"
license = "MIT"
name = "luxo"
version = "0.0.1"

[dependencies]
anyhow = "1.0.97"
bitflags = "2.9.0"
image = {version = "0.25.6", default-features = false, features = ["png"]}
tracing = { version = "0.1.41", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror = "2"
xcursor = {version = "0.3.8"}
xkbcommon = "0.8.0"
smithay-drm-extras = { git = "https://github.com/Smithay/smithay" }
drm = "0.14.1"

[dependencies.smithay]
git = "https://github.com/Smithay/smithay"
